SerialLayer class added

--- a/NND/NND.csproj
+++ b/NND/NND.csproj
@@ -58,7 +58,8 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
-    <Compile Include="Seerialize\Serializer.cs" />
+    <Compile Include="Serialize\Config.cs" />
+    <Compile Include="Serialize\Serializer.cs" />
     <Page Include="MainWindow.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
